Fix some layout issues

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -38,6 +38,11 @@ h1 {
     font-size: 2em;
 }
 
+h2 {
+    font-family: "Open Sans", Roboto, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 1.2em;
+}
+
 p {
     font-family: "Vollkorn", Serif;
     font-size: 1em;
@@ -105,11 +110,12 @@ footer {
 
 #wrapper {
     width: 100%;
-    min-height: 100%;
+    min-height: calc(100% - 136px);
     background: #eee;
     float: left;
     margin-top: 71px;
 }
+
 header {
     z-index: 2;
     position: fixed;
@@ -119,6 +125,7 @@ header {
     background-color: #fff;
     border-bottom: 3px solid #DA0A16;
 }
+
 #logo-wrapper {
     width: calc(100% - 68px);
     height: 100%;
@@ -127,8 +134,9 @@ header {
 
 #logo {
     float: left;
-    width: 100%;
+    width: 128px;
     height: 48px;
+    position: relative;
     background-image: url('../images/logo.svg');
     background-repeat: no-repeat;
     margin-top: 10px;
@@ -250,31 +258,6 @@ header {
     height: 100%;
     cursor: pointer;
     display: inline-block;
-}
-
-.card {
-    position: relative;
-    overflow: hidden;
-    width: calc(100% - 75px);
-    max-width: 1920px;
-    margin: 15px;
-    padding: 15px;
-    display: inline-block;
-    -webkit-transition: all .3s ease;
-    -moz-transition: all .3s ease;
-    -ms-transition: all .3s ease;
-    -o-transition: all .3s ease;
-    transition: all .3s ease;
-    background: #fff;
-    -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, .1);
-    -moz-box-shadow: 0 0 6px rgba(0, 0, 0, .1);
-    box-shadow: 0 0 6px rgba(0, 0, 0, .1)
-}
-
-.card:hover {
-    -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .16), 0 2px 5px 0 rgba(0, 0, 0, .26);
-    -moz-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .16), 0 2px 5px 0 rgba(0, 0, 0, .26);
-    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .16), 0 2px 5px 0 rgba(0, 0, 0, .26)
 }
 
 
