--- a/static/css/module.css
+++ b/static/css/module.css
@@ -1,11 +1,27 @@
 table { min-width: 200px; margin-left: 24px; border-spacing: 0; } 
 td { border: 1px solid #e0e0e0; padding: 5px; }
 .card {
-    height: calc(100vh - 48px - 30px);
-    width: 30vw;
-    float: left;
-    position: absolute;
-    left: 15px;
-    top: 15px;   
-    border: 1px solid #e0e0e0;
+    position: relative;
+    overflow: hidden;
+    width: calc(100% - 75px);
+    max-width: 1920px;
+    margin: 15px;
+    padding: 15px;
+    display: inline-block;
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    -ms-transition: all .3s ease;
+    -o-transition: all .3s ease;
+    transition: all .3s ease;
+    background: #fff;
+    -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, .1);
+    -moz-box-shadow: 0 0 6px rgba(0, 0, 0, .1);
+    box-shadow: 0 0 6px rgba(0, 0, 0, .1)
 }
+
+.card:hover {
+    -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .16), 0 2px 5px 0 rgba(0, 0, 0, .26);
+    -moz-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .16), 0 2px 5px 0 rgba(0, 0, 0, .26);
+    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .16), 0 2px 5px 0 rgba(0, 0, 0, .26)
+}
+
